// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty exercise 1`] = `
<div>
  <section />
</div>
`;

exports[`renders an exercise 1`] = `
<div>
  <section>
    <span
      class="sc-bczRLJ sc-hKMtZM giQkjG lfnGoX"
    >
      a
    </span>
    <span
      class="sc-bczRLJ giQkjG"
    >
      b
    </span>
  </section>
</div>
`;

exports[`renders an exercise 2`] = `
<div>
  <section>
    <span
      class="sc-bczRLJ sc-gsnTZi giQkjG eyaram"
    >
      a
    </span>
    <span
      class="sc-bczRLJ sc-dkzDqf giQkjG kekkCb"
    >
      b
    </span>
  </section>
</div>
`;
